--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,1 @@
-Dies ist eine Community Dokumentation der Swiss Knight Z Allianz.
+Dies ist eine Community Dokumentation der Swiss Knights Z Allianz aus Zero City.
